WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51300
[Qt] [WK2] QWKPagePrivate::paint() does not need to save the graphics context
https://bugs.webkit.org/show_bug.cgi?id=51300
Summary
[Qt] [WK2] QWKPagePrivate::paint() does not need to save the graphics context
Benjamin Poulain
Reported
2010-12-18 15:28:44 PST
QWKPagePrivate::paint() currently saves and restore the context at each call. This is uncessary, the DrawingAreaProxy already does that: -TiledDrawingAreaProxy uses gc.save() before rendering anything. -ChunkedUpdateDrawingAreaProxy calls platformPaint. For Qt, ChunkedUpdateDrawingAreaProxy::platformPaint() is just calling drawimage, which has no side effect. In any case, there is no requirement for a graphics item to return the painter in the same state as it was given.
Attachments
Patch
(1.25 KB, patch)
2010-12-18 15:30 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2010-12-18 15:30:48 PST
Created
attachment 76948
[details]
Patch
Benjamin Poulain
Comment 2
2010-12-18 16:38:08 PST
Comment on
attachment 76948
[details]
Patch Thanks Kenneth for the review.
WebKit Commit Bot
Comment 3
2010-12-18 16:40:58 PST
Comment on
attachment 76948
[details]
Patch Rejecting
attachment 76948
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76948]" exit_code: 2 Last 500 characters of output: ts/svn-apply', u'--reviewer', u'Kenneth Rohde Christiansen', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebKit2/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit2/UIProcess/API/qt/qwkpage.cpp Hunk #1 FAILED at 160. 1 out of 1 hunk FAILED -- saving rejects to file WebKit2/UIProcess/API/qt/qwkpage.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kenneth Rohde Christiansen', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/7231043
Benjamin Poulain
Comment 4
2010-12-19 11:48:27 PST
Comment on
attachment 76948
[details]
Patch cq+, that should merge now.
WebKit Commit Bot
Comment 5
2010-12-19 13:35:06 PST
Comment on
attachment 76948
[details]
Patch Clearing flags on attachment: 76948 Committed
r74327
: <
http://trac.webkit.org/changeset/74327
>
WebKit Commit Bot
Comment 6
2010-12-19 13:35:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug