2010-12-19  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] [WK2] QWKPagePrivate::paint() does not need to save the graphics context
        https://bugs.webkit.org/show_bug.cgi?id=51300

        Remove the unnecessary save() and restore() on the QPainter.

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPagePrivate::paint):

Canonical link: https://commits.webkit.org/64669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74327 268f45cc-cd09-0410-ab3c-d52691b4dbfc